# delivery-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_RU.md  TASK_EN.md  TASK_RU.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: main.py  worker.py
src/delivery_service/application/: exceptions.py
src/delivery_service/application/dto/: parcel.py
src/delivery_service/application/interfaces/: cache.py  exchange_rate.py  logger.py  unit_of_work.py
src/delivery_service/application/repositories/: parcel_repository.py  parcel_type_repository.py  repository.py
src/delivery_service/application/use_cases/: get_parcel.py  get_parcel_types.py  get_user_parcels.py  register_parcel.py
src/delivery_service/domain/: exceptions.py
src/delivery_service/domain/entities/: parcel.py  parcel_type.py
src/delivery_service/domain/interfaces/: delivery_price_calculator.py
src/delivery_service/domain/services/: default_price_calculator.py
src/delivery_service/entrypoints/: fastapi.py  rabbitmq.py
src/delivery_service/infrastructure/: config.py
src/delivery_service/presentation/: exceptions.py
tests/unit/: conftest.py
tests/unit/application/: conftest.py  test_get_parcel.py  test_get_parcel_types.py  test_get_users_parcels.py  test_register_parcels.py
tests/unit/domain/: test_default_price_calculator.py  test_exchange_rate.py  test_money.py  test_parcel.py  test_parcel_id.py  test_user_id.py  test_weight.py
tests/unit/infrastructure/: test_cbr_exchange_rate.py  test_redis_cache.py
(+31 files in other folders)
